tests/ui/spirv-attr/multiple.stderr
error: only one intrinsic type attribute is allowed on a struct
 --> $DIR/multiple.rs:8:18
  |
8 | #[spirv(sampler, sampler)]
  |                  ^^^^^^^
  |
note: previous intrinsic type attribute
 --> $DIR/multiple.rs:8:9
  |
8 | #[spirv(sampler, sampler)]
  |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:13:5
   |
13 |     image_type(dim = "Dim2D", depth = 0, arrayed = 0, multisampled = 0, sampled = 1, image_format = "Unknown"),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:12:5
   |
12 |     sampler,
   |     ^^^^^^^

error: only one #[spirv(block)] attribute is allowed on a struct
  --> $DIR/multiple.rs:17:16
   |
17 | #[spirv(block, block)]
   |                ^^^^^
   |
note: previous #[spirv(block)] attribute
  --> $DIR/multiple.rs:17:9
   |
17 | #[spirv(block, block)]
   |         ^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:20:17
   |
20 | #[spirv(vertex, vertex)]
   |                 ^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:20:9
   |
20 | #[spirv(vertex, vertex)]
   |         ^^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:23:17
   |
23 | #[spirv(vertex, fragment)]
   |                 ^^^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:23:9
   |
23 | #[spirv(vertex, fragment)]
   |         ^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:28:22
   |
28 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |                      ^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:28:13
   |
28 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |             ^^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:29:22
   |
29 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |                      ^^^^^^^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:29:13
   |
29 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |             ^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:31:23
   |
31 |     #[spirv(position, position)] _same_builtin: (),
   |                       ^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:31:13
   |
31 |     #[spirv(position, position)] _same_builtin: (),
   |             ^^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:32:23
   |
32 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |                       ^^^^^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:32:13
   |
32 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |             ^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:34:33
   |
34 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:34:13
   |
34 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:35:33
   |
35 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:35:13
   |
35 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:37:26
   |
37 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:37:13
   |
37 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:38:26
   |
38 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:38:13
   |
38 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(flat)] attribute is allowed on a function param
  --> $DIR/multiple.rs:40:19
   |
40 |     #[spirv(flat, flat)] _flat: (),
   |                   ^^^^
   |
note: previous #[spirv(flat)] attribute
  --> $DIR/multiple.rs:40:13
   |
40 |     #[spirv(flat, flat)] _flat: (),
   |             ^^^^

error: only one #[spirv(unroll_loops)] attribute is allowed on a function
  --> $DIR/multiple.rs:43:23
   |
43 | #[spirv(unroll_loops, unroll_loops)]
   |                       ^^^^^^^^^^^^
   |
note: previous #[spirv(unroll_loops)] attribute
  --> $DIR/multiple.rs:43:9
   |
43 | #[spirv(unroll_loops, unroll_loops)]
   |         ^^^^^^^^^^^^

error: aborting due to 15 previous errors

